--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI App</title>
+    <title>AI Image Generator</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <img id="image" src="image.png" alt="Default Image">
-        <input id="input-field" type="text" placeholder="Enter your prompt">
-        <button id="submit-button">Submit</button>
+    <div id="background-container"></div>
+    <div class="overlay"></div>
+    <div class="container text-center">
+        <div id="error-message" class="text-danger"></div>
+        <img id="result-image" src="default-image.png" alt="Default Image" class="img-fluid my-3">
+        <div class="input-group mb-3">
+            <input type="text" id="prompt-input" class="form-control" placeholder="Enter your prompt here">
+            <div class="input-group-append">
+                <button id="generate-button" class="btn btn-primary">Generate Image</button>
+            </div>
+        </div>
     </div>
+    <script src="background.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
